--- a/packages/storybook/.storybook/preview-head.html
+++ b/packages/storybook/.storybook/preview-head.html
@@ -1,1 +1,5 @@
-<link href="//fonts.googleapis.com/css?family=Lato:400,700,900" rel="stylesheet" type="text/css" />
+<link
+	href="//fonts.googleapis.com/css?family=Lato:400,700"
+	rel="stylesheet"
+	type="text/css"
+/>
