--- a/packages/dev-app/public/index.html
+++ b/packages/dev-app/public/index.html
@@ -2,10 +2,19 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link
-			href="//fonts.googleapis.com/css?family=Lato:400,700"
+			rel="preconnect"
+			href="https://fonts.gstatic.com"
+			crossOrigin="crossOrigin"
+		/>
+		<link
+			href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap"
 			rel="stylesheet"
-			type="text/css"
+		/>
+		<link
+			href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,600;1,400;1,600&display=swap"
+			rel="stylesheet"
 		/>
 		<link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
 		<meta
